k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linker-ingress
  namespace: linker-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: public
  rules:
  - host: charlesmonroe.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linker-app-service
            port:
              number: 80
